corrected styling to remove horizontal scrollbar

--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 .brooke-main {
-  width: 100vw;
+  width: 97vw;
 	height: 97vh;
 }
 
@@ -78,8 +78,6 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
 	align-items: end;
-	margin-left: 5px;
-	margin-top: 5px;
 }
 
 .button {
